--- a/MotsCroises/server/tsconfig.json
+++ b/MotsCroises/server/tsconfig.json
@@ -1,15 +1,15 @@
 {
-  "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "sourceRoot": "app",
-      "sourceMap": true,
-      "outDir": "out",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "noImplicitAny": true,
-	    "noImplicitThis": true,
-      "suppressImplicitAnyIndexErrors": true
+    "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "sourceRoot": "app",
+        "sourceMap": true,
+        "outDir": "out/server/app",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "suppressImplicitAnyIndexErrors": true
     }
 }
