--- a/MotsCroises/server/package.json
+++ b/MotsCroises/server/package.json
@@ -20,6 +20,7 @@
     "cors": "~2.8.1",
     "debug": "~2.2.0",
     "express": "4.15.4",
+    "mongodb": "^2.2.31",
     "morgan": "1.7.0",
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-alpha6",
