--- a/MotsCroises/server/package.json
+++ b/MotsCroises/server/package.json
@@ -18,6 +18,7 @@
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.0",
     "cors": "~2.8.1",
+    "datamuse": "^1.0.5",
     "debug": "~2.2.0",
     "express": "4.15.4",
     "mongodb": "^2.2.31",
