--- a/MotsCroises/server/package.json
+++ b/MotsCroises/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && concurrently --kill-others \"tsc -w \" \"nodemon out/server/app/www.js\" ",
     "lint": "tslint app/**/*.ts app/*.ts --force -t verbose",
-    "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
+    "test": "tsc && concurrently \"tsc -w\" \"mocha -r ts-node/register app/**/*.spec.ts",
     "test-once": "tsc && karma start karma.conf.js --single-run || npm run-script coverage",
     "coverage": "remap-istanbul -i coverage/coverage-final.json -o coverage -t html",
     "tsc": "tsc",
@@ -18,6 +18,7 @@
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.0",
     "cors": "~2.8.1",
+    "datamuse": "^1.0.5",
     "debug": "~2.2.0",
     "express": "4.15.4",
     "mongodb": "^2.2.31",
@@ -30,15 +31,15 @@
   },
   "devDependencies": {
     "@types/body-parser": "1.16.5",
-    "@types/express": "4.0.37",
-    "@types/express-serve-static-core": "4.0.50",
-    "@types/node": "^8.0.26",
-    "@types/node-uuid": "0.0.28",
     "@types/chai": "4.0.4",
     "@types/cookie-parser": "1.4.1",
     "@types/cors": "2.8.1",
+    "@types/express": "4.0.37",
+    "@types/express-serve-static-core": "4.0.50",
     "@types/mocha": "2.2.42",
     "@types/morgan": "1.7.32",
+    "@types/node": "^8.0.26",
+    "@types/node-uuid": "0.0.28",
     "@types/socket.io": "1.4.30",
     "chai": "4.0.0",
     "concurrently": "^3.0.0",
@@ -53,6 +54,7 @@
     "mocha": "3.5.0",
     "remap-istanbul": "^0.8.4",
     "rimraf": "^2.5.4",
+    "ts-node": "^3.3.0",
     "tslint": "^4.2.0",
     "tslint-eslint-rules": "^3.2.3",
     "typescript": "^2.4.2"
