--- a/MotsCroises/server/package.json
+++ b/MotsCroises/server/package.json
@@ -21,6 +21,7 @@
     "datamuse": "^1.0.5",
     "debug": "~2.2.0",
     "express": "4.15.4",
+    "extend": "^3.0.1",
     "mongodb": "^2.2.31",
     "morgan": "1.7.0",
     "nodemon": "^1.11.0",
