--- a/MotsCroises/server/.vscode/launch.json
+++ b/MotsCroises/server/.vscode/launch.json
@@ -1,20 +1,24 @@
 {
-    // Use IntelliSense to learn about possible Node.js debug attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${file}",
-            "outFiles": [
-                "${workspaceRoot}/out/**/*.js"
-            ]
-        }
+      {
+        "type": "node",
+        "request": "attach",
+        "name": "Attach to Process",
+        "processId": "${command:PickProcess}"
+      },
+      {
+        "type": "chrome",
+        "request": "launch",
+        "name": "Debug client",
+        "url": "http://localhost:4200",
+        "webRoot": "${workspaceRoot}",
+        "sourceMaps": true,
+        "userDataDir": "${workspaceRoot}/.vscode/chrome",
+        "runtimeArgs": [
+          "--disable-session-crashed-bubble"
+        ]
+      }
     ]
-}
-
-
+  }
+  
