JGR: fusion avec master.

--- a/Course/server/tsconfig.json
+++ b/Course/server/tsconfig.json
@@ -3,9 +3,10 @@
       "target": "es6",
       "module": "commonjs",
       "moduleResolution": "node",
-      "sourceRoot": "app",
+      "sourceRoot": "./app",
       "sourceMap": true,
-      "outDir": "out",
+      "outDir": "./out",	  
+      "rootDir": "./",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "noImplicitAny": true,
