--- a/Course/server/package.json
+++ b/Course/server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "tsc && concurrently --kill-others \"tsc -w \" \"nodemon out/app/www.js\" ",
         "lint": "tslint app/**/*.ts app/*.ts --force -t verbose",
-        "test": "mocha -r ts-node/register app/**/testInteractionBd.ts",
+        "test": "mocha -r ts-node/register app/**/testBdInteraction.ts",
         "test-once": "tsc && karma start karma.conf.js --single-run || npm run-script coverage",
         "coverage": "remap-istanbul -i coverage/coverage-final.json -o coverage -t html",
         "tsc": "tsc",
