--- a/Course/client/package.json
+++ b/Course/client/package.json
@@ -12,22 +12,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
+    "@angular/animations": "^4.4.6",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
+    "core-js": "^2.5.1",
+    "rxjs": "^5.5.0",
+    "socket.io": "^1.4.4",
+    "socket.io-client": "^1.4.4",
     "stats.js": "^0.17.0",
-    "three": "~0.84.0",
-    "socket.io": "1.4.4",
-    "socket.io-client": "1.4.4",
-    "zone.js": "^0.8.14"
+    "three": "^0.84.0",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@angular/cli": "1.3.2",
