--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,23 @@
 {
-        "version": "0.2.0",
-        "configurations": [
-            {
-                "type": "node",
-                "request": "attach",
-                "name": "Attach",
-                "port": 5858,
-                "protocol": "legacy"
-            },
-            {
-                "type": "node",
-                "request": "launch",
-                "name": "Launch Program",
-                "program": "${file}",
-                "outFiles": [
-                    "${workspaceRoot}/out/**/*.js"
-                ]
-            }
+    "version": "0.2.0",
+    "configurations": [
+      {
+        "type": "node",
+        "request": "attach",
+        "name": "Attach to Process",
+        "processId": "${command:PickProcess}"
+      },
+      {
+        "type": "chrome",
+        "request": "launch",
+        "name": "Debug client",
+        "url": "http://localhost:4200",
+        "webRoot": "${workspaceRoot}",
+        "sourceMaps": true,
+        "userDataDir": "${workspaceRoot}/.vscode/chrome",
+        "runtimeArgs": [
+          "--disable-session-crashed-bubble"
         ]
-    }
+      }
+    ]
+  }
