--- a/MotsCroises/.vscode/launch.json
+++ b/MotsCroises/.vscode/launch.json
@@ -1,23 +1,36 @@
 {
     "version": "0.2.0",
     "configurations": [
-      {
-        "type": "node",
-        "request": "attach",
-        "name": "Attach to Process",
-        "processId": "${command:PickProcess}"
-      },
-      {
-        "type": "chrome",
-        "request": "launch",
-        "name": "Debug client",
-        "url": "http://localhost:4200",
-        "webRoot": "${workspaceRoot}",
-        "sourceMaps": true,
-        "userDataDir": "${workspaceRoot}/.vscode/chrome",
-        "runtimeArgs": [
-          "--disable-session-crashed-bubble"
-        ]
-      }
+
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Process",
+            "processId": "${command:PickProcess}"
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Debug client",
+            "url": "http://localhost:4200",
+            "webRoot": "${workspaceRoot}",
+            "sourceMaps": true,
+            "userDataDir": "${workspaceRoot}/.vscode/chrome",
+            "runtimeArgs": [
+                "--disable-session-crashed-bubble"
+            ]
+        },
+        {
+            "type": "chrome",
+            "request": "attach",
+            "name": "Debug client test",
+            "url": "http://localhost:9876",
+            "webRoot": "${workspaceRoot}",
+            "sourceMaps": true,
+            "userDataDir": "${workspaceRoot}/.vscode/chrome",
+            "runtimeArgs": [
+                "--disable-session-crashed-bubble"
+            ]
+        }
     ]
-  }
+}
